<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.incluirProduto.IncluirProdutoActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNomeProduto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_padrao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNomeProduto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_produto"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilQuantidadeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margem_padrao"
        android:layout_marginTop="@dimen/margem_interna"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilNomeProduto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etQuantidadeProduto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_quantidade"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgUnidadeMedida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margem_padrao"
        android:layout_marginTop="@dimen/margem_interna"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilQuantidadeProduto">

        <RadioButton
            android:id="@+id/rbKilo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/descricao_radio_kg" />

        <RadioButton
            android:id="@+id/rbLitro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/descricao_radio_litros" />

        <RadioButton
            android:id="@+id/rbUnidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/descricao_radio_unidade" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_padrao"
        android:text="@string/button_adicionar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>